--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <!-- Main container -->
+    <main>
+          <!-- Main container -->
     <div class="main-container">
       <!-- Main contant section-->
       <div class="main-contant-section">
@@ -247,5 +248,6 @@
         </div>
       </aside>
     </div>
+    </main>
   </body>
 </html>
